Update How to generate your CV in 3 minutes.html

--- a/original/How to generate your CV in 3 minutes.html
+++ b/original/How to generate your CV in 3 minutes.html
@@ -4,18 +4,23 @@
 </head>
 <body>
 <iframe width="680" height="382" src="https://www.youtube.com/embed/57kS-89h9-E" title="How To Generate Your CV In 3 Minutes" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-  Embark on a hassle-free journey to create your professional CV in just three minutes — for free! Drawing from my experience at Philippi Brown’s Farm Internet Café, where I diligently crafted over 100 CVs, I’ve come to understand the crucial need for a service like this, especially for individuals stepping into the job market.
+ <p>
+Embark on a hassle-free journey to create your professional CV in just three minutes — for free! Drawing from my experience at Philippi Brown’s Farm Internet Café, where I diligently crafted over 100 CVs, I’ve come to understand the crucial need for a service like this, especially for individuals stepping into the job market.
 
 The significance lies not only in the speed but in providing a guide for those navigating the labyrinth of CV formats. Through the variety of templates available, you can seamlessly integrate your educational background, work experiences, and references. It’s not just about creating a CV; it’s about ensuring you present your best professional self to potential employers.
 
 In a job market that demands precision and clarity, these templates offer not just convenience but also an understanding of what makes a CV stand out. You no longer need to worry about the acceptable format; the system guides you through it, ensuring your CV is polished and ready to make a lasting impression.
 
 So, buckle up for your new job! Let’s transform your experiences, skills, and aspirations into a compelling narrative that opens doors. It’s not just about generating a CV; it’s about unlocking opportunities and showcasing the best version of you. Get ready to take that next step in your career journey! 🚀✨
+  
+ </p>
 
-<iframe width="680" height="382" src="https://mngz47.github.io/mongeziSibongakonke/services.html" title="How To Generate Your CV In 3 Minutes" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-
-Follow Me On IG: https://www.instagram.com/mongezisibongakonke
+<iframe width="100%" height="auto" src="https://mngz47.github.io/mongeziSibongakonke/services.html" title="How To Generate Your CV In 3 Minutes" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+<p>
+  Follow Me On IG: https://www.instagram.com/mongezisibongakonke
 Invest: https://www.patreon.com/productlists
   
+</p>
+
 </body>
 </html>
