Update How to generate your CV in 3 minutes.html

--- a/original/How to generate your CV in 3 minutes.html
+++ b/original/How to generate your CV in 3 minutes.html
@@ -15,10 +15,10 @@ So, buckle up for your new job! Let’s transform your experiences, skills, and 
   
  </p>
 
-<iframe width="100%" height="auto" src="https://mngz47.github.io/mongeziSibongakonke/services.html" title="How To Generate Your CV In 3 Minutes" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+<iframe width="100%" height="450" src="https://mngz47.github.io/mongeziSibongakonke/services.html" title="How To Generate Your CV In 3 Minutes" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 <p>
-  Follow Me On IG: https://www.instagram.com/mongezisibongakonke
-Invest: https://www.patreon.com/productlists
+  Follow Me On IG: <a href="https://www.instagram.com/mongezisibongakonke" >https://www.instagram.com/mongezisibongakonke</a><br>
+Invest: <a href="https://www.patreon.com/productlists" >https://www.patreon.com/productlists</a>
   
 </p>
 
