Update How to generate your CV in 3 minutes.html

--- a/original/How to generate your CV in 3 minutes.html
+++ b/original/How to generate your CV in 3 minutes.html
@@ -5,6 +5,7 @@
 <body>
 <iframe width="680" height="382" src="https://www.youtube.com/embed/57kS-89h9-E" title="How To Generate Your CV In 3 Minutes" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
  <p>
+   <h3>How to generate CV in 3 min</h3>
 Embark on a hassle-free journey to create your professional CV in just three minutes — for free! Drawing from my experience at Philippi Brown’s Farm Internet Café, where I diligently crafted over 100 CVs, I’ve come to understand the crucial need for a service like this, especially for individuals stepping into the job market.
 
 The significance lies not only in the speed but in providing a guide for those navigating the labyrinth of CV formats. Through the variety of templates available, you can seamlessly integrate your educational background, work experiences, and references. It’s not just about creating a CV; it’s about ensuring you present your best professional self to potential employers.
@@ -15,7 +16,7 @@ So, buckle up for your new job! Let’s transform your experiences, skills, and 
   
  </p>
 
-<iframe width="100%" height="450" src="https://mngz47.github.io/mongeziSibongakonke/services.html" title="How To Generate Your CV In 3 Minutes" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+<iframe width="100%" height="550" src="https://mngz47.github.io/mongeziSibongakonke/services.html" title="How To Generate Your CV In 3 Minutes" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 <p>
   Follow Me On IG: <a href="https://www.instagram.com/mongezisibongakonke" >https://www.instagram.com/mongezisibongakonke</a><br>
 Invest: <a href="https://www.patreon.com/productlists" >https://www.patreon.com/productlists</a>
