--- a/original/How to generate your CV in 3 minutes.html
+++ b/original/How to generate your CV in 3 minutes.html
@@ -3,6 +3,10 @@
   <title>How to generate CV in 3 min</title>
 </head>
 <body>
+  <link rel="stylesheet" href="https://mngz47.github.io/Data_Matrix_10X10_Marketing/style.css">
+			<link rel="stylesheet" href="https://mngz47.github.io/Data_Matrix_10X10_Marketing/mobstyle.css">
+			<link rel="stylesheet" href="https://mngz47.github.io/Data_Matrix_10X10_Marketing/bootstrap.min.css">
+<script src="https://mngz47.github.io/Data_Matrix_10X10_Marketing/api.js" ></script>
 <div id=header class="header row" style="rgba(0,0,0,0.2);
 box-shadow: -1px -1px 7px 0px rgba(0,0,0,0.2);" >
 <div class="col-sm-3" >
