Update How to generate your CV in 3 minutes.html

--- a/original/How to generate your CV in 3 minutes.html
+++ b/original/How to generate your CV in 3 minutes.html
@@ -24,7 +24,7 @@ box-shadow: -1px -1px 7px 0px rgba(0,0,0,0.2);" >
        <input style="width:100%;height:30px;border:0px;padding:4px;" onfocus=s_in(); onblur=s_out(this); type=search onkeyup="search(this.value);" class=" shadow" id=search placeholder="search" />   
     </div>
   <div class=col-sm-6 style="padding-top:25px;font-size:1.2em;">
-<a class=space href=documentation.html >Documentation</a>
+<a class=space href=https://mngz47.github.io/Data_Matrix_10X10_Marketing/documentation.html >Documentation</a>
   </div>
 </div>
 </div>
@@ -35,7 +35,7 @@ box-shadow: -1px -1px 7px 0px rgba(0,0,0,0.2);" >
     <iframe width="680" height="382" src="https://www.youtube.com/embed/57kS-89h9-E" title="How To Generate Your CV In 3 Minutes" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
  
   </p>
-<p style="font-size:5em;" >
+<p style="font-size:2em;" >
  
 Embark on a hassle-free journey to create your professional CV in just three minutes — for free! Drawing from my experience at Philippi Brown’s Farm Internet Café, where I diligently crafted over 100 CVs, I’ve come to understand the crucial need for a service like this, especially for individuals stepping into the job market.
 
