--- a/documentation.html
+++ b/documentation.html
@@ -34,16 +34,16 @@ box-shadow: -1px -1px 7px 0px rgba(0,0,0,0.2);" >
 
   <h3>Original </h3>
   <ul>
-      <li><a href="original/" >How to generate your CV in 3 minutes</a></li>
+      <li><a href="original/How to generate your CV in 3 minutes.html" >How to generate your CV in 3 minutes</a></li>
      <li><a href="original/" ></a></li>
      <li><a href="original/" ></a></li>
      <li><a href="original/" ></a></li>
      <li><a href="original/PHP Remote Text Writer Github Repository.html" ></a></li>
      <li><a href="original/Creating_a_travel_website_with_sites.google.com_in_an_hour_for_free.html" >Creating A Travel Website With sites.google.com — In An Hour — For Free</a></li>
-     <li<a href="original/" ></a>></li>
-     <li><a href="original/" ></a></li>
-     <li><a href="original/" ></a></li>
-     <li><a href="original/" ></a></li>
+     <li<a href="original/I Stopped Doing My Homework To Focus On Girls At 6th Grade.html" >I Stopped Doing My Homework To Focus On Girls At 6th Grade 😅</a>></li>
+     <li><a href="original/Specialized Software Using Framework and API of Established Businesses.html" >Specialized Software Using Framework and API of Established Businesses</a></li>
+     <li><a href="original/A Skill Everyone Should Have (bank leverage), Get NYDF Funding.html" >A Skill Everyone Should Have (bank leverage), Get NYDF Funding.</a></li>
+     <li><a href="original/Why South African Forex Traders Need Quants.html" >Why South African Forex Traders Need Quants</a></li>
   </ul>
   
 <iframe width="100%" height="550" src="https://mngz47.github.io/mongeziSibongakonke/services.html" title="How To Generate Your CV In 3 Minutes" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
