--- a/documentation.html
+++ b/documentation.html
@@ -32,19 +32,37 @@ box-shadow: -1px -1px 7px 0px rgba(0,0,0,0.2);" >
 </div>
 </div>
 
-  <h3>Original </h3>
-  <ul>
-      <li><a href="original/How to generate your CV in 3 minutes.html" >How to generate your CV in 3 minutes</a></li>
-     <li><a href="original/" ></a></li>
-     <li><a href="original/" ></a></li>
-     <li><a href="original/" ></a></li>
-     <li><a href="original/PHP Remote Text Writer Github Repository.html" ></a></li>
+ 
+	<p>
+	 <h3>Original </h3>	
+	<ul>
+     <li><a href="original/How to generate your CV in 3 minutes.html" >How to generate your CV in 3 minutes</a></li>
+     <li><a href="original/F_Snake_Easy_vs_Hard_Mode.html" >F Snake Easy vs. Hard Mode</a></li>
+     <li><a href="original/Kasi_Nametest_Testing_Ten_South_African_Girl_Names.html" >Kasi Nametest — Testing Ten South African Girl Names</a></li>
+     <li><a href="original/PHP Remote Text Writer Github Repository.html" >PHP Remote Text Writer Github Repository</a></li>
+     <li><a href="original/My First Github Repository (Black Box).html" >My First Github Repository (Black Box)</a></li>
      <li><a href="original/Creating_a_travel_website_with_sites.google.com_in_an_hour_for_free.html" >Creating A Travel Website With sites.google.com — In An Hour — For Free</a></li>
-     <li<a href="original/I Stopped Doing My Homework To Focus On Girls At 6th Grade.html" >I Stopped Doing My Homework To Focus On Girls At 6th Grade 😅</a>></li>
+     <li><a href="original/I Stopped Doing My Homework To Focus On Girls At 6th Grade.html" >I Stopped Doing My Homework To Focus On Girls At 6th Grade 😅</a></li>
      <li><a href="original/Specialized Software Using Framework and API of Established Businesses.html" >Specialized Software Using Framework and API of Established Businesses</a></li>
      <li><a href="original/A Skill Everyone Should Have (bank leverage), Get NYDF Funding.html" >A Skill Everyone Should Have (bank leverage), Get NYDF Funding.</a></li>
      <li><a href="original/Why South African Forex Traders Need Quants.html" >Why South African Forex Traders Need Quants</a></li>
-  </ul>
+  	</ul>
+	</p>
+<p>
+	 <h3>Invest </h3>	
+	<ul>
+     <li><a href="invest/How to generate your CV in 3 minutes.html" >How to generate your CV in 3 minutes</a></li>
+     <li><a href="invest/F_Snake_Easy_vs_Hard_Mode.html" >F Snake Easy vs. Hard Mode</a></li>
+     <li><a href="invest/Kasi_Nametest_Testing_Ten_South_African_Girl_Names.html" >Kasi Nametest — Testing Ten South African Girl Names</a></li>
+     <li><a href="invest/PHP Remote Text Writer Github Repository.html" >PHP Remote Text Writer Github Repository</a></li>
+     <li><a href="invest/My First Github Repository (Black Box).html" >My First Github Repository (Black Box)</a></li>
+     <li><a href="invest/Creating_a_travel_website_with_sites.google.com_in_an_hour_for_free.html" >Creating A Travel Website With sites.google.com — In An Hour — For Free</a></li>
+     <li><a href="invest/I Stopped Doing My Homework To Focus On Girls At 6th Grade.html" >I Stopped Doing My Homework To Focus On Girls At 6th Grade 😅</a></li>
+     <li><a href="invest/Specialized Software Using Framework and API of Established Businesses.html" >Specialized Software Using Framework and API of Established Businesses</a></li>
+     <li><a href="invest/A Skill Everyone Should Have (bank leverage), Get NYDF Funding.html" >A Skill Everyone Should Have (bank leverage), Get NYDF Funding.</a></li>
+     <li><a href="invest/Why South African Forex Traders Need Quants.html" >Why South African Forex Traders Need Quants</a></li>
+  	</ul>
+	</p>
   
 <iframe width="100%" height="550" src="https://mngz47.github.io/mongeziSibongakonke/services.html" title="How To Generate Your CV In 3 Minutes" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 
