--- a/documentation.html
+++ b/documentation.html
@@ -31,7 +31,7 @@ box-shadow: -1px -1px 7px 0px rgba(0,0,0,0.2);" >
 <div id=header_right class="col-sm-3">
 </div>
 </div>
-
+<h2>Audience vs Article</h2>
  
 	<p>
 	 <h3>Original </h3>	
