--- a/documentation.html
+++ b/documentation.html
@@ -79,7 +79,134 @@ box-shadow: -1px -1px 7px 0px rgba(0,0,0,0.2);" >
      <li><a href="video/Why South African Forex Traders Need Quants.html" >Why South African Forex Traders Need Quants</a></li>
   	</ul>
 	</p>
-  
+
+	<p>
+	 <h3>Student </h3>	
+	<ul>
+     <li><a href="student/How to generate your CV in 3 minutes.html" >How to generate your CV in 3 minutes</a></li>
+     <li><a href="student/F_Snake_Easy_vs_Hard_Mode.html" >F Snake Easy vs. Hard Mode</a></li>
+     <li><a href="student/Kasi_Nametest_Testing_Ten_South_African_Girl_Names.html" >Kasi Nametest — Testing Ten South African Girl Names</a></li>
+     <li><a href="student/PHP Remote Text Writer Github Repository.html" >PHP Remote Text Writer Github Repository</a></li>
+     <li><a href="student/My First Github Repository (Black Box).html" >My First Github Repository (Black Box)</a></li>
+     <li><a href="student/Creating_a_travel_website_with_sites.google.com_in_an_hour_for_free.html" >Creating A Travel Website With sites.google.com — In An Hour — For Free</a></li>
+     <li><a href="student/I Stopped Doing My Homework To Focus On Girls At 6th Grade.html" >I Stopped Doing My Homework To Focus On Girls At 6th Grade 😅</a></li>
+     <li><a href="student/Specialized Software Using Framework and API of Established Businesses.html" >Specialized Software Using Framework and API of Established Businesses</a></li>
+     <li><a href="student/A Skill Everyone Should Have (bank leverage), Get NYDF Funding.html" >A Skill Everyone Should Have (bank leverage), Get NYDF Funding.</a></li>
+     <li><a href="student/Why South African Forex Traders Need Quants.html" >Why South African Forex Traders Need Quants</a></li>
+  	</ul>
+	</p>
+
+	<p>
+	 <h3>HR </h3>	
+	<ul>
+     <li><a href="hr/How to generate your CV in 3 minutes.html" >How to generate your CV in 3 minutes</a></li>
+     <li><a href="hr/F_Snake_Easy_vs_Hard_Mode.html" >F Snake Easy vs. Hard Mode</a></li>
+     <li><a href="hr/Kasi_Nametest_Testing_Ten_South_African_Girl_Names.html" >Kasi Nametest — Testing Ten South African Girl Names</a></li>
+     <li><a href="hr/PHP Remote Text Writer Github Repository.html" >PHP Remote Text Writer Github Repository</a></li>
+     <li><a href="hr/My First Github Repository (Black Box).html" >My First Github Repository (Black Box)</a></li>
+     <li><a href="hr/Creating_a_travel_website_with_sites.google.com_in_an_hour_for_free.html" >Creating A Travel Website With sites.google.com — In An Hour — For Free</a></li>
+     <li><a href="hr/I Stopped Doing My Homework To Focus On Girls At 6th Grade.html" >I Stopped Doing My Homework To Focus On Girls At 6th Grade 😅</a></li>
+     <li><a href="hr/Specialized Software Using Framework and API of Established Businesses.html" >Specialized Software Using Framework and API of Established Businesses</a></li>
+     <li><a href="hr/A Skill Everyone Should Have (bank leverage), Get NYDF Funding.html" >A Skill Everyone Should Have (bank leverage), Get NYDF Funding.</a></li>
+     <li><a href="hr/Why South African Forex Traders Need Quants.html" >Why South African Forex Traders Need Quants</a></li>
+  	</ul>
+	</p>
+
+	<p>
+	 <h3>Accounting </h3>	
+	<ul>
+     <li><a href="accounting/How to generate your CV in 3 minutes.html" >How to generate your CV in 3 minutes</a></li>
+     <li><a href="accounting/F_Snake_Easy_vs_Hard_Mode.html" >F Snake Easy vs. Hard Mode</a></li>
+     <li><a href="accounting/Kasi_Nametest_Testing_Ten_South_African_Girl_Names.html" >Kasi Nametest — Testing Ten South African Girl Names</a></li>
+     <li><a href="accounting/PHP Remote Text Writer Github Repository.html" >PHP Remote Text Writer Github Repository</a></li>
+     <li><a href="accounting/My First Github Repository (Black Box).html" >My First Github Repository (Black Box)</a></li>
+     <li><a href="accounting/Creating_a_travel_website_with_sites.google.com_in_an_hour_for_free.html" >Creating A Travel Website With sites.google.com — In An Hour — For Free</a></li>
+     <li><a href="accounting/I Stopped Doing My Homework To Focus On Girls At 6th Grade.html" >I Stopped Doing My Homework To Focus On Girls At 6th Grade 😅</a></li>
+     <li><a href="accounting/Specialized Software Using Framework and API of Established Businesses.html" >Specialized Software Using Framework and API of Established Businesses</a></li>
+     <li><a href="accounting/A Skill Everyone Should Have (bank leverage), Get NYDF Funding.html" >A Skill Everyone Should Have (bank leverage), Get NYDF Funding.</a></li>
+     <li><a href="accounting/Why South African Forex Traders Need Quants.html" >Why South African Forex Traders Need Quants</a></li>
+  	</ul>
+	</p>
+
+	<p>
+	 <h3>Law </h3>	
+	<ul>
+     <li><a href="law/How to generate your CV in 3 minutes.html" >How to generate your CV in 3 minutes</a></li>
+     <li><a href="law/F_Snake_Easy_vs_Hard_Mode.html" >F Snake Easy vs. Hard Mode</a></li>
+     <li><a href="law/Kasi_Nametest_Testing_Ten_South_African_Girl_Names.html" >Kasi Nametest — Testing Ten South African Girl Names</a></li>
+     <li><a href="law/PHP Remote Text Writer Github Repository.html" >PHP Remote Text Writer Github Repository</a></li>
+     <li><a href="law/My First Github Repository (Black Box).html" >My First Github Repository (Black Box)</a></li>
+     <li><a href="law/Creating_a_travel_website_with_sites.google.com_in_an_hour_for_free.html" >Creating A Travel Website With sites.google.com — In An Hour — For Free</a></li>
+     <li><a href="law/I Stopped Doing My Homework To Focus On Girls At 6th Grade.html" >I Stopped Doing My Homework To Focus On Girls At 6th Grade 😅</a></li>
+     <li><a href="law/Specialized Software Using Framework and API of Established Businesses.html" >Specialized Software Using Framework and API of Established Businesses</a></li>
+     <li><a href="law/A Skill Everyone Should Have (bank leverage), Get NYDF Funding.html" >A Skill Everyone Should Have (bank leverage), Get NYDF Funding.</a></li>
+     <li><a href="law/Why South African Forex Traders Need Quants.html" >Why South African Forex Traders Need Quants</a></li>
+  	</ul>
+	</p>
+
+	<p>
+	 <h3>Political </h3>	
+	<ul>
+     <li><a href="political/How to generate your CV in 3 minutes.html" >How to generate your CV in 3 minutes</a></li>
+     <li><a href="political/F_Snake_Easy_vs_Hard_Mode.html" >F Snake Easy vs. Hard Mode</a></li>
+     <li><a href="political/Kasi_Nametest_Testing_Ten_South_African_Girl_Names.html" >Kasi Nametest — Testing Ten South African Girl Names</a></li>
+     <li><a href="political/PHP Remote Text Writer Github Repository.html" >PHP Remote Text Writer Github Repository</a></li>
+     <li><a href="political/My First Github Repository (Black Box).html" >My First Github Repository (Black Box)</a></li>
+     <li><a href="political/Creating_a_travel_website_with_sites.google.com_in_an_hour_for_free.html" >Creating A Travel Website With sites.google.com — In An Hour — For Free</a></li>
+     <li><a href="political/I Stopped Doing My Homework To Focus On Girls At 6th Grade.html" >I Stopped Doing My Homework To Focus On Girls At 6th Grade 😅</a></li>
+     <li><a href="political/Specialized Software Using Framework and API of Established Businesses.html" >Specialized Software Using Framework and API of Established Businesses</a></li>
+     <li><a href="political/A Skill Everyone Should Have (bank leverage), Get NYDF Funding.html" >A Skill Everyone Should Have (bank leverage), Get NYDF Funding.</a></li>
+     <li><a href="political/Why South African Forex Traders Need Quants.html" >Why South African Forex Traders Need Quants</a></li>
+  	</ul>
+	</p>
+
+	<p>
+	 <h3>Technical </h3>	
+	<ul>
+     <li><a href="technical/How to generate your CV in 3 minutes.html" >How to generate your CV in 3 minutes</a></li>
+     <li><a href="technical/F_Snake_Easy_vs_Hard_Mode.html" >F Snake Easy vs. Hard Mode</a></li>
+     <li><a href="technical/Kasi_Nametest_Testing_Ten_South_African_Girl_Names.html" >Kasi Nametest — Testing Ten South African Girl Names</a></li>
+     <li><a href="technical/PHP Remote Text Writer Github Repository.html" >PHP Remote Text Writer Github Repository</a></li>
+     <li><a href="technical/My First Github Repository (Black Box).html" >My First Github Repository (Black Box)</a></li>
+     <li><a href="technical/Creating_a_travel_website_with_sites.google.com_in_an_hour_for_free.html" >Creating A Travel Website With sites.google.com — In An Hour — For Free</a></li>
+     <li><a href="technical/I Stopped Doing My Homework To Focus On Girls At 6th Grade.html" >I Stopped Doing My Homework To Focus On Girls At 6th Grade 😅</a></li>
+     <li><a href="technical/Specialized Software Using Framework and API of Established Businesses.html" >Specialized Software Using Framework and API of Established Businesses</a></li>
+     <li><a href="technical/A Skill Everyone Should Have (bank leverage), Get NYDF Funding.html" >A Skill Everyone Should Have (bank leverage), Get NYDF Funding.</a></li>
+     <li><a href="technical/Why South African Forex Traders Need Quants.html" >Why South African Forex Traders Need Quants</a></li>
+  	</ul>
+	</p>
+
+	<p>
+	 <h3>Primitive </h3>	
+	<ul>
+     <li><a href="primitive/How to generate your CV in 3 minutes.html" >How to generate your CV in 3 minutes</a></li>
+     <li><a href="primitive/F_Snake_Easy_vs_Hard_Mode.html" >F Snake Easy vs. Hard Mode</a></li>
+     <li><a href="primitive/Kasi_Nametest_Testing_Ten_South_African_Girl_Names.html" >Kasi Nametest — Testing Ten South African Girl Names</a></li>
+     <li><a href="primitive/PHP Remote Text Writer Github Repository.html" >PHP Remote Text Writer Github Repository</a></li>
+     <li><a href="primitive/My First Github Repository (Black Box).html" >My First Github Repository (Black Box)</a></li>
+     <li><a href="primitive/Creating_a_travel_website_with_sites.google.com_in_an_hour_for_free.html" >Creating A Travel Website With sites.google.com — In An Hour — For Free</a></li>
+     <li><a href="primitive/I Stopped Doing My Homework To Focus On Girls At 6th Grade.html" >I Stopped Doing My Homework To Focus On Girls At 6th Grade 😅</a></li>
+     <li><a href="primitive/Specialized Software Using Framework and API of Established Businesses.html" >Specialized Software Using Framework and API of Established Businesses</a></li>
+     <li><a href="primitive/A Skill Everyone Should Have (bank leverage), Get NYDF Funding.html" >A Skill Everyone Should Have (bank leverage), Get NYDF Funding.</a></li>
+     <li><a href="primitive/Why South African Forex Traders Need Quants.html" >Why South African Forex Traders Need Quants</a></li>
+  	</ul>
+	</p>
+
+	<p>
+	 <h3>Religious </h3>	
+	<ul>
+     <li><a href="religious/How to generate your CV in 3 minutes.html" >How to generate your CV in 3 minutes</a></li>
+     <li><a href="religious/F_Snake_Easy_vs_Hard_Mode.html" >F Snake Easy vs. Hard Mode</a></li>
+     <li><a href="religious/Kasi_Nametest_Testing_Ten_South_African_Girl_Names.html" >Kasi Nametest — Testing Ten South African Girl Names</a></li>
+     <li><a href="religious/PHP Remote Text Writer Github Repository.html" >PHP Remote Text Writer Github Repository</a></li>
+     <li><a href="religious/My First Github Repository (Black Box).html" >My First Github Repository (Black Box)</a></li>
+     <li><a href="religious/Creating_a_travel_website_with_sites.google.com_in_an_hour_for_free.html" >Creating A Travel Website With sites.google.com — In An Hour — For Free</a></li>
+     <li><a href="religious/I Stopped Doing My Homework To Focus On Girls At 6th Grade.html" >I Stopped Doing My Homework To Focus On Girls At 6th Grade 😅</a></li>
+     <li><a href="religious/Specialized Software Using Framework and API of Established Businesses.html" >Specialized Software Using Framework and API of Established Businesses</a></li>
+     <li><a href="religious/A Skill Everyone Should Have (bank leverage), Get NYDF Funding.html" >A Skill Everyone Should Have (bank leverage), Get NYDF Funding.</a></li>
+     <li><a href="religious/Why South African Forex Traders Need Quants.html" >Why South African Forex Traders Need Quants</a></li>
+  	</ul>
+	</p>
 <iframe width="100%" height="550" src="https://mngz47.github.io/mongeziSibongakonke/services.html" title="How To Generate Your CV In 3 Minutes" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 
   
